feat: adding first react package with rollup and babel

--- a/lerna.json
+++ b/lerna.json
@@ -15,6 +15,6 @@
   },
   "npmClient": "yarn",
   "packages": ["packages/*"],
-  "useWorkspaces": true,
+  "useWorkspaces": false,
   "version": "independent"
 }
