--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "repository": "git@github.com:eggdev/component-library.git",
   "author": "Brendan Eggers <eggers.brendan@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "lerna run --parallel build",
+    "publish": "lerna publish from-git"
+  },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.26.0",
+    "eslint": "^7g.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
@@ -18,9 +27,11 @@
     "eslint-plugin-react": "^7.23.2",
     "husky": "^6.0.0",
     "lerna": "^4.0.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rollup": "^2.47.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   },
-  "workspaces": [
-    "packages/*"
-  ]
+  "dependencies": {}
 }
