--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "react-components",
+  "name": "@eggdev/react-components",
   "version": "1.0.0",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "dev": "yarn build -- --watch",
+    "prepublish": "yarn build"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4"
