--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "scripts": {
     "build": "lerna run --parallel build",
-    "publish": "lerna publish from-git"
+    "publish": "lerna publish from-git",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -17,7 +19,12 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "eslint": "^7g.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -33,5 +40,7 @@
     "rollup": "^2.47.0",
     "rollup-plugin-peer-deps-external": "^2.2.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@storybook/addons": "^6.2.9"
+  }
 }
