--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -10,7 +10,8 @@
     "prepublish": "yarn build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4"
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
