--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.47.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "storybook-addon-sketch": "^0.2.1"
   },
   "dependencies": {
     "@material-ui/styles": "^4.11.4",
