--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addons": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -42,8 +43,5 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "storybook-addon-sketch": "^0.2.1"
   },
-  "dependencies": {
-    "@material-ui/styles": "^4.11.4",
-    "@storybook/addons": "^6.2.9"
-  }
+  "dependencies": {}
 }
