--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2"
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4"
   },
   "peerDependencies": {
     "react": "^17.0.2",
