ci: adding new init method to install node_modules with a command

--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "yarn build -- --watch",
-    "prepublish": "yarn build"
+    "init": "yarn install"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
