--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "clean": "rimraf **/node_modules",
     "lerna:build": "lerna run --parallel build",
     "lerna:publish": "lerna version && lerna publish from-git",
+    "init:all": "lerna run --parallel init",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -39,6 +41,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rimraf": "^3.0.2",
     "rollup": "^2.47.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "storybook-addon-sketch": "^0.2.1"
