--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rollup -c",
+    "clean": "rimraf **/node_modules",
     "dev": "yarn build -- --watch",
     "init": "yarn install"
   },
