feat: adding new configs

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,11 +4,27 @@
   "description": "EsLint Config. Lets make it look good",
   "author": "Brendan Eggers <eggers.brendan@gmail.com>",
   "license": "MIT",
-  "main": "index.js",
+  "main": "configurations/browser.js",
+  "engines": {
+    "node": "^10.12.0 || >=12.0.0"
+  },
+  "files": [
+    "/configurations",
+    "/rules"
+  ],
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "eslint": "^7.26.0"
+  "dependencies": {
+    "babel-eslint": "10.1.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-cypress": "2.11.1",
+    "eslint-plugin-emotion": "10.0.27",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsdoc": "30.7.8",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-sonarjs": "0.5.0"
   }
 }
