--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/preset-react": "^7.13.13",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@eggdev/eslint-config": "^0.0.2",
+    "@eggdev/prettier-config": "^0.0.2",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@storybook/addon-actions": "^6.2.9",
