--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eggdev/react-components",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.0",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
   "license": "MIT",
