--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,20 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.3"
+  "command": {
+    "version": {
+      "allowBranch": "main",
+      "conventionalCommits": true,
+      "exact": true,
+      "ignoreChanges": [
+        "**/*.md",
+        "**/*.mdx",
+        "**/*.stories.js",
+        "**/*.test.js",
+        "/packages/colors/stories/"
+      ],
+      "message": "chore: publish release"
+    }
+  },
+  "npmClient": "yarn",
+  "packages": ["packages/*"],
+  "version": "independent"
 }
