--- a/packages/eslint-config-eggdev/package.json
+++ b/packages/eslint-config-eggdev/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "babel-eslint": "10.1.0",
-    "eslint": "6.8.0",
+    "eslint": "^7.26.0",
     "eslint-plugin-cypress": "2.11.1",
     "eslint-plugin-emotion": "10.0.27",
     "eslint-plugin-import": "2.20.1",
