--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@storybook/addons": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.26.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.23.2",
     "husky": "^6.0.0",
     "lerna": "^4.0.0",
     "react": "^17.0.2",
